5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4446/executions/1812_2575.log
== TEST (2019-06-12 22:07:09) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)

for i in s:
	if(s[i]=="TV"):
		vet[0]=vet[0]+1
	if(s[i]=="NETFLIX"):
		vet[1]=vet[1]+1
	if(s[i]=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:08:05) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)
print(s)
for i in s:
	if(s[i]=="TV"):
		vet[0]=vet[0]+1
	if(s[i]=="NETFLIX"):
		vet[1]=vet[1]+1
	if(s[i]=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:27:09) 
-- CODE:

s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)
print(s)
for i in s:
	if(s[i]=="TV"):
		vet[0]=vet[0]+1
	if(s[i]=="NETFLIX"):
		vet[1]=vet[1]+1
	if(s[i]=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet=zeros(3, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:27:39) 
-- CODE:

s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)

for i in s:
	if(s[i]=="TV"):
		vet[0]=vet[0]+1
	if(s[i]=="NETFLIX"):
		vet[1]=vet[1]+1
	if(s[i]=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    vet=zeros(3, dtype=int)
NameError: name 'zeros' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 22:28:05) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)

for i in s:
	if(s[i]=="TV"):
		vet[0]=vet[0]+1
	if(s[i]=="NETFLIX"):
		vet[1]=vet[1]+1
	if(s[i]=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:15:00) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)
for i in s:
	if(i=="TV"):
		vet[0]=vet[0]+1
	if(i=="NETFLIX"):
		vet[1]=vet[1]+1
	if(i=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:17:40) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ".upper())
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:29:08) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ".upper())
print(s)
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:29:43) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
print(s)
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:29:49) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
print(s)
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-12 23:30:50) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
print(s)
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- EXECUTION TIME:
1.22329
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
['NETFLIX','TV','NETFLIX','NETFLIX']
[0 0 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
['NETFLIX','TV','YOUTUBE']
[0 0 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
[0 0 0]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:41:46) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
for elemento in s:
vet=zeros(3, dtype=int)
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
File "XXXX", line 5
    vet=zeros(3, dtype=int)
      ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:41:56) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
for elemento in s:
	vet=zeros(3, dtype=int)
	if(elemento=="TV"):
		vet[0]=vet[0]+1
	if(elemento=="NETFLIX"):
		vet[1]=vet[1]+1
	if(elemento=="YOUTUBE"):
		vet[2]==vet[2]+1
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:53:02) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
a=0
b=0
c=0
for elemento in s:
	vet=zeros(3, dtype=int)
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:56:29) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
a=0
b=0
c=0
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:56:45) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
a=0
b=0
c=0
vet=zeros(3, dtype=int)
for elemento in s:
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-12 23:58:20) 
-- CODE:
from numpy import *
s=input("digite as preferencias: ")
s=s.upper()
a=0
b=0
c=0
for elemento in s:
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:08:55) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
s=s.upper()
a=0
b=0
c=0
for elemento in s:
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:09:36) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
a=0
b=0
c=0
for elemento in s:
	elemento=elemento.upper()
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:10:01) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
a=0
b=0
c=0
for elemento in s:
	elemento=elemento.upper()
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- EXECUTION TIME:
1.04555
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:10:57) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
a=0
b=0
c=0
for elemento in s:
	elemento=elemento.upper()
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:14:07) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
a=0
b=0
c=0
for elemento in s:
	elemento=elemento.upper()
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- EXECUTION TIME:
1.32583
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 0]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 0]
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-13 00:14:45) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
a=0
b=0
c=0
for elemento in s:
	elemento=elemento.upper()
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c==c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-13 00:16:09) 
-- CODE:
from numpy import *
s=array(eval(input("digite as preferencias: ")))
a=0
b=0
c=0
for elemento in s:
	elemento=elemento.upper()
	if(elemento=="TV"):
		a=a+1
	if(elemento=="NETFLIX"):
		b=b+1
	if(elemento=="YOUTUBE"):
		c=c+1
vet=zeros(3, dtype=int)
vet[0]=a
vet[1]=b
vet[2]=c
print(vet)
-- EXECUTION TIME:
1.17537
-- TEST CASE 1:
---- input:
['NETFLIX','TV','NETFLIX','NETFLIX']
---- correct output:
[1 3 0]
---- user output:
[1 3 0]
-- TEST CASE 2:
---- input:
['NETFLIX','TV','YOUTUBE']
---- correct output:
[1 1 1]
---- user output:
[1 1 1]
-- TEST CASE 3:
---- input:
['NETFLIX','TV','YOUTUBE','NETFLIX','TV','YOUTUBE']
---- correct output:
[2 2 2]
---- user output:
[2 2 2]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
